# ragbackend_fastapi

./: README.md  pyproject.toml
app/: chatbot.py  main.py
